added basic layout
Added basic html and css to the web app.Added a new background image.Added the main container of the to-do list.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <h1>TO-DO LIST</h1>
+      <div class="in">
+        <input type="text" placeholder="Add a task here..." />
+        <button><i class="bi bi-box-arrow-in-right"></i></button>
+      </div>
+      <div class="content"></div>
+    </div>
+  </body>
   <script src="main.js"></script>
 </html>
